--- a/main.html
+++ b/main.html
@@ -10,6 +10,37 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form method="post">
+		<label for="name">Name*</label>
+		<input type="text" required id="name"><br>
+
+		<label for="email">Email*</label>
+		<input type="email" required id="email"><br>
+
+		<label for="gender">Gender*</label>
+		<input type="radio" value="male" name="gender">Male</input>
+		<input type="radio" value="female" name="gender">Female</input><br>
+		 
+
+		<label for="laptop">Laptop Brands</label>
+		<select for="laptop">
+			<option value="select" disabled placeholder="select">select</option>
+			<option value="apple">Apple</option>
+			<option value="asus">Asus</option>
+			<option value="hp">HP</option>
+		</select><br>
+
+		<label for="age">Age*</label>
+		<input type="number" id="age"><br>
+
+		<label for="dob">DOB*</label>
+		<input type="date" id="dob"><br>
+
+		<label for="password">Password*</label>
+		<input type="password" id="password"><br>
+		
+		<button>Submit</button>
+	</form>
 
 </body>
 
