--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 		 
 
 		<label for="laptop">Laptop Brands</label>
-		<select for="laptop">
+		<select for="laptop" id="laptop">
 			<option value="select" disabled placeholder="select">select</option>
 			<option value="apple">Apple</option>
 			<option value="asus">Asus</option>
@@ -31,13 +31,13 @@
 		</select><br>
 
 		<label for="age">Age*</label>
-		<input type="number" id="age"><br>
+		<input type="number" id="age" required><br>
 
 		<label for="dob">DOB*</label>
-		<input type="date" id="dob"><br>
+		<input type="date" id="dob" required><br>
 
 		<label for="password">Password*</label>
-		<input type="password" id="password"><br>
+		<input type="password" id="password" required><br>
 		
 		<button>Submit</button>
 	</form>
