--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 		<input type="email" required id="email"><br>
 
 		<label for="gender">Gender*</label>
-		<input type="radio" value="male" name="gender">Male</input>
+		<input type="radio" value="male" name="gender" required>Male</input>
 		<input type="radio" value="female" name="gender">Female</input><br>
 		 
 
@@ -39,7 +39,7 @@
 		<label for="password">Password*</label>
 		<input type="password" id="password" required><br>
 		
-		<button>Submit</button>
+		<button type="submit">Submit</button>
 	</form>
 
 </body>
